--- a/main/BitBracket/src/BitBracket/appsettings.json
+++ b/main/BitBracket/src/BitBracket/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BitBracket-6a207161-df86-4385-9c80-f8f7b4d056e9;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AuthenticationConnection": "Server=(localdb)\\mssqllocaldb;Database=BitBracketAuthentication;Trusted_Connection=True;MultipleActiveResultSets=true",
     "BitBracketConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BitBracket;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
        "Logging": {
