commiting small change

--- a/main/BitBracket/src/BitBracket/appsettings.json
+++ b/main/BitBracket/src/BitBracket/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "AuthenticationConnection": "Data Source=localhost;Initial Catalog=BitBracketAuth;User Id=SA;Password='Str0ngPassw0rdYouRemember!'; TrustServerCertificate=True;",
-    "BitBracketConnection": "Data Source=localhost;Initial Catalog=BitBracket1;User Id=SA;Password='Str0ngPassw0rdYouRemember!'; TrustServerCertificate=True;"
+    "BitBracketConnection": "Data Source=localhost;Initial Catalog=BitBracket;User Id=SA;Password='Str0ngPassw0rdYouRemember!'; TrustServerCertificate=True;"
   },
        "Logging": {
     "LogLevel": {
