--- a/main/BitBracket/src/BitBracket/appsettings.json
+++ b/main/BitBracket/src/BitBracket/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    "AuthenticationConnection": "Data Source=localhost;Initial Catalog=BitBracketAuth;User Id=SA;Password='Str0ngPassw0rdYouRemember!'; TrustServerCertificate=True;",
+    "AuthenticationConnection": "Server=(localdb)\\mssqllocaldb;Database=BitBracketAuth;Trusted_Connection=True;MultipleActiveResultSets=true",
     "BitBracketConnection": "Data Source=localhost;Initial Catalog=BitBracket;User Id=SA;Password='Str0ngPassw0rdYouRemember!'; TrustServerCertificate=True;"
   },
-       "Logging": {
+  "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
