last commit from this branch

--- a/main/BitBracket/src/BitBracket/appsettings.json
+++ b/main/BitBracket/src/BitBracket/appsettings.json
@@ -11,3 +11,7 @@
   },
   "AllowedHosts": "*"
 }
+
+/*  miguels  "AuthenticationConnection": "Server=(localdb)\\mssqllocaldb;Database=BitBracketAuth;Trusted_Connection=True;MultipleActiveResultSets=true",
+   miguels "BitBracketConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BitBracket;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+*/
