Adding the email feature to the app

--- a/main/BitBracket/src/BitBracket/appsettings.json
+++ b/main/BitBracket/src/BitBracket/appsettings.json
@@ -10,5 +10,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SendGridKey": "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"
 }
