--- a/main/BitBracket/src/BitBracket/BitBracket.csproj
+++ b/main/BitBracket/src/BitBracket/BitBracket.csproj
@@ -36,6 +36,7 @@
     <PackageReference Include="SendGrid" Version="9.29.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
+    <PackageReference Include="Twilio" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
