--- a/main/BitBracket/src/BitBracket/appsettings.json
+++ b/main/BitBracket/src/BitBracket/appsettings.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
-    "AuthenticationConnection": "Server=(localdb)\\mssqllocaldb;Database=BitBracketAuth;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "BitBracketConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BitBracket;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BitBracket;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AuthenticationConnection": "Data Source= DESKTOP-LL5TIFG;Initial Catalog=BitBracketAuth;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "BitBracketConnection": "Data Source= DESKTOP-LL5TIFG;Initial Catalog=BitBracket;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
@@ -12,3 +11,4 @@
   },
   "AllowedHosts": "*"
 }
+
