--- a/main/BitBracket/src/BitBracket/appsettings.json
+++ b/main/BitBracket/src/BitBracket/appsettings.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
-    "AuthenticationConnection": "Data Source=localhost;Initial Catalog=BitBracketAuth;User Id=SA;Password='Str0ngPassw0rdYouRemember!'; TrustServerCertificate=True;",
-    "BitBracketConnection": "Data Source=localhost;Initial Catalog=BitBracket1;User Id=SA;Password='Str0ngPassw0rdYouRemember!'; TrustServerCertificate=True;",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BitBracket;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AuthenticationConnection": "Data Source= DESKTOP-LL5TIFG;Initial Catalog=BitBracketAuth;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "BitBracketConnection": "Data Source= DESKTOP-LL5TIFG;Initial Catalog=BitBracket;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
