Adding testing files and a folder contains final stuff

--- a/main/BitBracket/src/BitBracket/appsettings.json
+++ b/main/BitBracket/src/BitBracket/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "AuthenticationConnection": "Server=(localdb)\\mssqllocaldb;Database=BitBracketAuth;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "BitBracketConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BitBracket;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "AuthenticationConnection": "Data Source=localhost;Initial Catalog=BitBracketAuth;User Id=SA;Password='Str0ngPassw0rdYouRemember!'; TrustServerCertificate=True;",
+    "BitBracketConnection": "Data Source=localhost;Initial Catalog=BitBracket1;User Id=SA;Password='Str0ngPassw0rdYouRemember!'; TrustServerCertificate=True;",
     "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BitBracket;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
@@ -12,3 +12,4 @@
   },
   "AllowedHosts": "*"
 }
+
