--- a/main/BitBracket/src/BitBracket/BitBracket.csproj
+++ b/main/BitBracket/src/BitBracket/BitBracket.csproj
@@ -9,14 +9,17 @@
 
   <ItemGroup>
     <Content Remove="wwwroot\js\ProfilePage.js" />
+    <Content Remove="wwwroot\js\UsersPage.js" />
   </ItemGroup>
 
   <ItemGroup>
     <_ContentIncludedByDefault Remove="wwwroot\js\ProfilePage.js" />
+    <_ContentIncludedByDefault Remove="wwwroot\js\UsersPage.js" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="wwwroot\js\profilepage.js" />
+    <None Include="wwwroot\js\UsersPage.js" />
   </ItemGroup>
 
   <ItemGroup>
