--- a/main/BitBracket/tests/BitBracket_BDD_Tests/BitBracket_BDD_Tests.csproj
+++ b/main/BitBracket/tests/BitBracket_BDD_Tests/BitBracket_BDD_Tests.csproj
@@ -10,13 +10,13 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="nunit" Version="3.14.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
-    <PackageReference Include="Reqnroll.MsTest" Version="1.0.1" />
     <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Reqnroll.NUnit" Version="1.0.1" />
     <PackageReference Include="Selenium.Support" Version="4.19.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.19.0" />
+    <PackageReference Include="SpecFlow.Actions.Selenium" Version="0.1.332" />
   </ItemGroup>
 
 </Project>
