--- a/main/BitBracket/src/BitBracket/BitBracket.csproj
+++ b/main/BitBracket/src/BitBracket/BitBracket.csproj
@@ -8,16 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Home\test.cshtml" />
     <Content Remove="wwwroot\js\ProfilePage.js" />
     <Content Remove="wwwroot\js\UsersPage.js" />
   </ItemGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Home\test.cshtml" />
     <_ContentIncludedByDefault Remove="wwwroot\js\ProfilePage.js" />
     <_ContentIncludedByDefault Remove="wwwroot\js\UsersPage.js" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Views\Home\Test.cshtml" />
     <None Include="wwwroot\js\profilepage.js" />
     <None Include="wwwroot\js\UsersPage.js" />
   </ItemGroup>
@@ -44,6 +47,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
     <PackageReference Include="Twilio" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Home\test.cshtml" />
   </ItemGroup>
 
 </Project>
