--- a/.github/workflows/azure-depoly.yml
+++ b/.github/workflows/azure-depoly.yml
@@ -36,7 +36,7 @@ jobs:
     - name: 'Deploy to Azure WebApp'
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'CulturNary'  # Replace with your Azure Web App name
+        app-name: 'BitBracket'  # Replace with your Azure Web App name
         slot-name: 'production'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: './publish'
