--- a/.github/workflows/azure-depoly.yml
+++ b/.github/workflows/azure-depoly.yml
@@ -19,16 +19,16 @@ jobs:
         dotnet-version: '8.0.204'  # Adjust to your .NET version
 
     - name: Restore dependencies
-      run: dotnet restore main\BitBracket\src\BitBracket\BitBracket.csproj
+      run: dotnet restore main/BitBracket/src/BitBracket/BitBracket.csproj
 
     - name: Build
       run: dotnet build main/BitBracket/src/BitBracket/BitBracket.csproj --configuration Release --no-restore
 
     - name: Restore dependencies for test project
-      run: dotnet restore main/BitBracket/tests/BitBracket_NUnit_Tests\BitBracket_NUnit_Tests.csproj
+      run: dotnet restore main/BitBracket/tests/BitBracket_NUnit_Tests/BitBracket_NUnit_Tests.csproj
 
     - name: Test
-      run: dotnet test main/BitBracket/tests/BitBracket_NUnit_Tests\BitBracket_NUnit_Tests.csproj --no-restore --verbosity normal
+      run: dotnet test main/BitBracket/tests/BitBracket_NUnit_Tests/BitBracket_NUnit_Tests.csproj --no-restore --verbosity normal
 
     - name: Publish
       run: dotnet publish main/BitBracket/src/BitBracket/BitBracket.csproj --configuration Release --no-build -o ./publish
