--- a/main/BitBracket/src/BitBracket/BitBracket.csproj
+++ b/main/BitBracket/src/BitBracket/BitBracket.csproj
@@ -5,7 +5,7 @@
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-BitBracket-6a207161-df86-4385-9c80-f8f7b4d056e9</UserSecretsId>
-    <NoWarn>$(NoWarn);CS8632</NoWarn>
+    <NoWarn>$(NoWarn);CS8632;CS1998</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
